<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kantine Kiosk</string>
    <string name="kiosk_titel">Blauw-Geel Kiosk</string>
    <string name="code_instructie">Voer je 6-cijferige code in</string>
    <string name="code_onjuist">Onjuiste code, probeer opnieuw</string>
    <string name="te_veel_pogingen">Te veel pogingen, probeer het over een paar minuten opnieuw</string>
    <string name="geen_verbinding">Geen verbinding met de website</string>

    <string name="beheer_menu_titel">Wat wil je aanpassen?</string>
    <string name="ingelogd_als">Ingelogd als %1$s</string>
    <string name="menu_producten">Producten</string>
    <string name="menu_acties">Acties</string>
    <string name="menu_bardienst">Bardiensten</string>
    <string name="menu_uitgelicht">Uitgelicht</string>
    <string name="menu_wedstrijddag">Wedstrijddag</string>
    <string name="terug_naar_code">Andere code invoeren</string>
    <string name="opnieuw_proberen">Opnieuw proberen</string>
    <string name="terug">Terug</string>
    <string name="fout_laden">Kon niet laden. Tik om opnieuw te proberen.</string>
    <string name="fout_opslaan">Kon niet opslaan</string>
    <string name="annuleren">Annuleren</string>
    <string name="verwijderen">Verwijderen</string>

    <string name="titel_producten">Producten</string>
    <string name="label_actief">Actief</string>
    <string name="label_uitverkocht">Uitverkocht</string>

    <string name="titel_acties">Acties</string>
    <string name="knop_nieuwe_actie">+ Nieuwe actie</string>
    <string name="nieuwe_actie_titel">Nieuwe actie</string>
    <string name="actie_bewerken_titel">Actie bewerken</string>
    <string name="actie_product_label">Product</string>
    <string name="actie_tekst_label">Tekst (optioneel)</string>
    <string name="actie_actief_label">Toon op prijzenscherm</string>
    <string name="bevestig_verwijderen_actie">Deze actie verwijderen?</string>

    <string name="titel_bardiensten">Bardiensten</string>
    <string name="knop_nieuwe_bardienst">+ Nieuwe bardienst</string>
    <string name="nieuwe_bardienst_titel">Nieuwe bardienst</string>
    <string name="bardienst_bewerken_titel">Bardienst bewerken</string>
    <string name="bardienst_datum_label">Datum</string>
    <string name="bardienst_start_label">Vanaf</string>
    <string name="bardienst_eind_label">Tot</string>
    <string name="bardienst_namen_label">Wie</string>
    <string name="bevestig_verwijderen_bardienst">Deze bardienst verwijderen?</string>

    <string name="titel_uitgelicht">Uitgelicht product</string>
    <string name="uitgelicht_geen_optie">Geen (uitzetten)</string>
    <string name="uitgelicht_product_label">Product</string>
    <string name="uitgelicht_titel_label">Titel op het scherm</string>
    <string name="uitgelicht_huidig">Nu uitgelicht: %1$s</string>
    <string name="uitgelicht_niets_huidig">Nu niets uitgelicht</string>

    <string name="titel_wedstrijddag">Wedstrijddag-welkom</string>
    <string name="wedstrijddag_actief_label">Welkomstmelding actief</string>
    <string name="wedstrijddag_tekst_label">Tekst ({tegenstander} wordt vervangen)</string>
    <string name="wedstrijddag_test_knop">Testen op prijzenscherm</string>
    <string name="wedstrijddag_test_verstuurd">Testmelding verstuurd</string>

    <string name="instellingen">Instellingen</string>
    <string name="basis_url_label">Website-adres</string>
    <string name="opslaan">Opslaan</string>
    <string name="instellingen_opgeslagen">Instellingen opgeslagen</string>
</resources>
