<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_achtergrond"
    android:orientation="vertical"
    android:padding="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/beheer_menu_titel"
        android:textColor="@color/wit"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/knopProducten"
            style="@style/KaartKnop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/menu_producten" />

        <Button
            android:id="@+id/knopActies"
            style="@style/KaartKnop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/menu_acties" />

        <Button
            android:id="@+id/knopBardienst"
            style="@style/KaartKnop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/menu_bardienst" />

        <Button
            android:id="@+id/knopUitgelicht"
            style="@style/KaartKnop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/menu_uitgelicht" />
    </LinearLayout>

    <Button
        android:id="@+id/terugKnop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:text="@string/terug_naar_code"
        android:textAllCaps="false"
        android:textColor="@color/tekst_zacht_licht" />

</LinearLayout>
